2024R2/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md
# `MeshDisplayStyle`



#### *class* ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.MeshDisplayStyle

Bases: [`enum.Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

Specifies the MeshDisplayStyle.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Attributes

| Name |
| -------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`AspectRatio`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.AspectRatio) |
| [`ElementQuality`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.ElementQuality) |
| [`AspectRatioEXD`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.AspectRatioEXD) |
| [`CharacteristicLengthLSD`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.CharacteristicLengthLSD) |
| [`Hydrodynamics`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.Hydrodynamics) |
| [`JacobianRatio`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.JacobianRatio) |
| [`JacobianRatioCornerNodes`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.JacobianRatioCornerNodes) |
| [`JacobianRatioGaussPoints`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.JacobianRatioGaussPoints) |
| [`KnockdownFactor`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.KnockdownFactor) |
| [`MaxEdgeLength`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.MaxEdgeLength) |
| [`MaximumCornerAngle`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.MaximumCornerAngle) |
| [`MaxQuadAngle`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.MaxQuadAngle) |
| [`MaxTriAngle`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.MaxTriAngle) |
| [`MinEdgeLength`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.MinEdgeLength) |
| [`CharacteristicLength`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.CharacteristicLength) |
| [`MinQuadAngle`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.MinQuadAngle) |
| [`MinTriAngle`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.MinTriAngle) |
| [`OrthogonalQuality`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.OrthogonalQuality) |
| [`ParallelDeviation`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.ParallelDeviation) |
| [`ShellThickness`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.ShellThickness) |
| [`Skewness`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.Skewness) |
| [`TetCollapse`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.TetCollapse) |
| [`WarpingAngle`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.WarpingAngle) |
| [`WarpingFactor`](../../../../../v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md#MeshDisplayStyle.WarpingFactor) |

<a id="attribute-detail"></a>

## Attribute detail

<a id="MeshDisplayStyle.AspectRatio"></a>

### MeshDisplayStyle.AspectRatio *= 2*

<a id="MeshDisplayStyle.ElementQuality"></a>

### MeshDisplayStyle.ElementQuality *= 1*

<a id="MeshDisplayStyle.AspectRatioEXD"></a>

### MeshDisplayStyle.AspectRatioEXD *= 21*

<a id="MeshDisplayStyle.CharacteristicLengthLSD"></a>

### MeshDisplayStyle.CharacteristicLengthLSD *= 24*

<a id="MeshDisplayStyle.Hydrodynamics"></a>

### MeshDisplayStyle.Hydrodynamics *= 13*

<a id="MeshDisplayStyle.JacobianRatio"></a>

### MeshDisplayStyle.JacobianRatio *= 3*

<a id="MeshDisplayStyle.JacobianRatioCornerNodes"></a>

### MeshDisplayStyle.JacobianRatioCornerNodes *= 11*

<a id="MeshDisplayStyle.JacobianRatioGaussPoints"></a>

### MeshDisplayStyle.JacobianRatioGaussPoints *= 12*

<a id="MeshDisplayStyle.KnockdownFactor"></a>

### MeshDisplayStyle.KnockdownFactor *= 14*

<a id="MeshDisplayStyle.MaxEdgeLength"></a>

### MeshDisplayStyle.MaxEdgeLength *= 23*

<a id="MeshDisplayStyle.MaximumCornerAngle"></a>

### MeshDisplayStyle.MaximumCornerAngle *= 6*

<a id="MeshDisplayStyle.MaxQuadAngle"></a>

### MeshDisplayStyle.MaxQuadAngle *= 18*

<a id="MeshDisplayStyle.MaxTriAngle"></a>

### MeshDisplayStyle.MaxTriAngle *= 16*

<a id="MeshDisplayStyle.MinEdgeLength"></a>

### MeshDisplayStyle.MinEdgeLength *= 22*

<a id="MeshDisplayStyle.CharacteristicLength"></a>

### MeshDisplayStyle.CharacteristicLength *= 10*

<a id="MeshDisplayStyle.MinQuadAngle"></a>

### MeshDisplayStyle.MinQuadAngle *= 17*

<a id="MeshDisplayStyle.MinTriAngle"></a>

### MeshDisplayStyle.MinTriAngle *= 15*

<a id="MeshDisplayStyle.OrthogonalQuality"></a>

### MeshDisplayStyle.OrthogonalQuality *= 8*

<a id="MeshDisplayStyle.ParallelDeviation"></a>

### MeshDisplayStyle.ParallelDeviation *= 5*

<a id="MeshDisplayStyle.ShellThickness"></a>

### MeshDisplayStyle.ShellThickness *= 9*

<a id="MeshDisplayStyle.Skewness"></a>

### MeshDisplayStyle.Skewness *= 7*

<a id="MeshDisplayStyle.TetCollapse"></a>

### MeshDisplayStyle.TetCollapse *= 20*

<a id="MeshDisplayStyle.WarpingAngle"></a>

### MeshDisplayStyle.WarpingAngle *= 19*

<a id="MeshDisplayStyle.WarpingFactor"></a>

### MeshDisplayStyle.WarpingFactor *= 4*


