2024R2/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.md
# `MeshDisplayStyle`

<a id="ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.Enums.MeshDisplayStyle"></a>

#### *class* Ansys.Mechanical.DataModel.Enums.MeshDisplayStyle

Bases: [`enum.Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

Specifies the MeshDisplayStyle.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Attributes

| Name |
| -------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`AspectRatio`](#MeshDisplayStyle.AspectRatio) |
| [`AspectRatioEXD`](#MeshDisplayStyle.AspectRatioEXD) |
| [`CharacteristicLength`](#MeshDisplayStyle.CharacteristicLength) |
| [`CharacteristicLengthLSD`](#MeshDisplayStyle.CharacteristicLengthLSD) |
| [`DeviationFromGeometry`](#MeshDisplayStyle.DeviationFromGeometry) |
| [`ElementQuality`](#MeshDisplayStyle.ElementQuality) |
| [`GeometrySetting`](#MeshDisplayStyle.GeometrySetting) |
| [`Hydrodynamics`](#MeshDisplayStyle.Hydrodynamics) |
| [`JacobianRatio`](#MeshDisplayStyle.JacobianRatio) |
| [`JacobianRatioCornerNodes`](#MeshDisplayStyle.JacobianRatioCornerNodes) |
| [`JacobianRatioGaussPoints`](#MeshDisplayStyle.JacobianRatioGaussPoints) |
| [`KnockdownFactor`](#MeshDisplayStyle.KnockdownFactor) |
| [`MaxEdgeLength`](#MeshDisplayStyle.MaxEdgeLength) |
| [`MaxQuadAngle`](#MeshDisplayStyle.MaxQuadAngle) |
| [`MaxTriAngle`](#MeshDisplayStyle.MaxTriAngle) |
| [`MaximumCornerAngle`](#MeshDisplayStyle.MaximumCornerAngle) |
| [`MinEdgeLength`](#MeshDisplayStyle.MinEdgeLength) |
| [`MinQuadAngle`](#MeshDisplayStyle.MinQuadAngle) |
| [`MinTriAngle`](#MeshDisplayStyle.MinTriAngle) |
| [`OrthogonalQuality`](#MeshDisplayStyle.OrthogonalQuality) |
| [`ParallelDeviation`](#MeshDisplayStyle.ParallelDeviation) |
| [`ShellThickness`](#MeshDisplayStyle.ShellThickness) |
| [`Skewness`](#MeshDisplayStyle.Skewness) |
| [`TetCollapse`](#MeshDisplayStyle.TetCollapse) |
| [`WarpingAngle`](#MeshDisplayStyle.WarpingAngle) |
| [`WarpingFactor`](#MeshDisplayStyle.WarpingFactor) |

<a id="attribute-detail"></a>

## Attribute detail

<a id="MeshDisplayStyle.AspectRatio"></a>

### MeshDisplayStyle.AspectRatio *= 2*

<a id="MeshDisplayStyle.AspectRatioEXD"></a>

### MeshDisplayStyle.AspectRatioEXD *= 21*

<a id="MeshDisplayStyle.CharacteristicLength"></a>

### MeshDisplayStyle.CharacteristicLength *= 10*

<a id="MeshDisplayStyle.CharacteristicLengthLSD"></a>

### MeshDisplayStyle.CharacteristicLengthLSD *= 24*

<a id="MeshDisplayStyle.DeviationFromGeometry"></a>

### MeshDisplayStyle.DeviationFromGeometry *= 25*

<a id="MeshDisplayStyle.ElementQuality"></a>

### MeshDisplayStyle.ElementQuality *= 1*

<a id="MeshDisplayStyle.GeometrySetting"></a>

### MeshDisplayStyle.GeometrySetting *= 0*

<a id="MeshDisplayStyle.Hydrodynamics"></a>

### MeshDisplayStyle.Hydrodynamics *= 13*

<a id="MeshDisplayStyle.JacobianRatio"></a>

### MeshDisplayStyle.JacobianRatio *= 3*

<a id="MeshDisplayStyle.JacobianRatioCornerNodes"></a>

### MeshDisplayStyle.JacobianRatioCornerNodes *= 11*

<a id="MeshDisplayStyle.JacobianRatioGaussPoints"></a>

### MeshDisplayStyle.JacobianRatioGaussPoints *= 12*

<a id="MeshDisplayStyle.KnockdownFactor"></a>

### MeshDisplayStyle.KnockdownFactor *= 14*

<a id="MeshDisplayStyle.MaxEdgeLength"></a>

### MeshDisplayStyle.MaxEdgeLength *= 23*

<a id="MeshDisplayStyle.MaxQuadAngle"></a>

### MeshDisplayStyle.MaxQuadAngle *= 18*

<a id="MeshDisplayStyle.MaxTriAngle"></a>

### MeshDisplayStyle.MaxTriAngle *= 16*

<a id="MeshDisplayStyle.MaximumCornerAngle"></a>

### MeshDisplayStyle.MaximumCornerAngle *= 6*

<a id="MeshDisplayStyle.MinEdgeLength"></a>

### MeshDisplayStyle.MinEdgeLength *= 22*

<a id="MeshDisplayStyle.MinQuadAngle"></a>

### MeshDisplayStyle.MinQuadAngle *= 17*

<a id="MeshDisplayStyle.MinTriAngle"></a>

### MeshDisplayStyle.MinTriAngle *= 15*

<a id="MeshDisplayStyle.OrthogonalQuality"></a>

### MeshDisplayStyle.OrthogonalQuality *= 8*

<a id="MeshDisplayStyle.ParallelDeviation"></a>

### MeshDisplayStyle.ParallelDeviation *= 5*

<a id="MeshDisplayStyle.ShellThickness"></a>

### MeshDisplayStyle.ShellThickness *= 9*

<a id="MeshDisplayStyle.Skewness"></a>

### MeshDisplayStyle.Skewness *= 7*

<a id="MeshDisplayStyle.TetCollapse"></a>

### MeshDisplayStyle.TetCollapse *= 20*

<a id="MeshDisplayStyle.WarpingAngle"></a>

### MeshDisplayStyle.WarpingAngle *= 19*

<a id="MeshDisplayStyle.WarpingFactor"></a>

### MeshDisplayStyle.WarpingFactor *= 4*


